output/MGPLParser.java
// $ANTLR 3.5.1 /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g 2013-12-15 15:09:05

package antlr.projekt1;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class MGPLParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ANIMATION", "ASSIGN", 
		"ATTR", "CBRACKET", "CCURBRA", "CIRCLE", "COMMA", "CPARAN", "DIGIT", "DIV", 
		"DOT", "DOWNARROW", "ELSE", "EQUALS", "FOR", "GAME", "IF", "INT", "LDF", 
		"LEFTARROW", "LEQ", "LESS", "LOWCASE", "MINUS", "MULT", "NOT", "NUMBER", 
		"OBRACKET", "OCURBRA", "ON", "OPARAN", "OR", "PLUS", "RECTANGLE", "RIGHTARROW", 
		"SEMIKOL", "SINGLE_COMMENT", "SPACE", "TOUCHES", "TRIANGLE", "UPARROW", 
		"UPCASE", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ANIMATION=5;
	public static final int ASSIGN=6;
	public static final int ATTR=7;
	public static final int CBRACKET=8;
	public static final int CCURBRA=9;
	public static final int CIRCLE=10;
	public static final int COMMA=11;
	public static final int CPARAN=12;
	public static final int DIGIT=13;
	public static final int DIV=14;
	public static final int DOT=15;
	public static final int DOWNARROW=16;
	public static final int ELSE=17;
	public static final int EQUALS=18;
	public static final int FOR=19;
	public static final int GAME=20;
	public static final int IF=21;
	public static final int INT=22;
	public static final int LDF=23;
	public static final int LEFTARROW=24;
	public static final int LEQ=25;
	public static final int LESS=26;
	public static final int LOWCASE=27;
	public static final int MINUS=28;
	public static final int MULT=29;
	public static final int NOT=30;
	public static final int NUMBER=31;
	public static final int OBRACKET=32;
	public static final int OCURBRA=33;
	public static final int ON=34;
	public static final int OPARAN=35;
	public static final int OR=36;
	public static final int PLUS=37;
	public static final int RECTANGLE=38;
	public static final int RIGHTARROW=39;
	public static final int SEMIKOL=40;
	public static final int SINGLE_COMMENT=41;
	public static final int SPACE=42;
	public static final int TOUCHES=43;
	public static final int TRIANGLE=44;
	public static final int UPARROW=45;
	public static final int UPCASE=46;
	public static final int WS=47;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "mult", "forStmt", "expr", "varDecl", "prog", "add", "objType", 
		"unary", "attrAssList", "var", "eventBlock", "assStmt2", "op", "animBlock", 
		"init", "konjunkt", "attrAss", "objDecl", "atom", "block", "stmt", "relat", 
		"assStmt", "keyStroke", "ifStmt", "decl", "stmtBlock"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public MGPLParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public MGPLParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public MGPLParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return MGPLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/phrizzel/ponyshit/repo/compilerbau/MGPL.g"; }


	public static class prog_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "prog"
	// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:60:1: prog : GAME ^ LDF OPARAN ! ( attrAssList )? CPARAN ! ( decl )* stmtBlock ( block )* ;
	public final MGPLParser.prog_return prog() throws RecognitionException {
		MGPLParser.prog_return retval = new MGPLParser.prog_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token GAME1=null;
		Token LDF2=null;
		Token OPARAN3=null;
		Token CPARAN5=null;
		ParserRuleReturnScope attrAssList4 =null;
		ParserRuleReturnScope decl6 =null;
		ParserRuleReturnScope stmtBlock7 =null;
		ParserRuleReturnScope block8 =null;

		CommonTree GAME1_tree=null;
		CommonTree LDF2_tree=null;
		CommonTree OPARAN3_tree=null;
		CommonTree CPARAN5_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "prog");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(60, 0);

		try {
			// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:60:14: ( GAME ^ LDF OPARAN ! ( attrAssList )? CPARAN ! ( decl )* stmtBlock ( block )* )
			dbg.enterAlt(1);

			// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:60:16: GAME ^ LDF OPARAN ! ( attrAssList )? CPARAN ! ( decl )* stmtBlock ( block )*
			{
			root_0 = (CommonTree)adaptor.nil();


			dbg.location(60,20);
			GAME1=(Token)match(input,GAME,FOLLOW_GAME_in_prog855); 
			GAME1_tree = (CommonTree)adaptor.create(GAME1);
			root_0 = (CommonTree)adaptor.becomeRoot(GAME1_tree, root_0);
			dbg.location(60,22);
			LDF2=(Token)match(input,LDF,FOLLOW_LDF_in_prog858); 
			LDF2_tree = (CommonTree)adaptor.create(LDF2);
			adaptor.addChild(root_0, LDF2_tree);
			dbg.location(60,32);
			OPARAN3=(Token)match(input,OPARAN,FOLLOW_OPARAN_in_prog860); dbg.location(60,34);
			// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:60:34: ( attrAssList )?
			int alt1=2;
			try { dbg.enterSubRule(1);
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			int LA1_0 = input.LA(1);
			if ( (LA1_0==LDF) ) {
				alt1=1;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:60:34: attrAssList
					{
					dbg.location(60,34);
					pushFollow(FOLLOW_attrAssList_in_prog863);
					attrAssList4=attrAssList();
					state._fsp--;

					adaptor.addChild(root_0, attrAssList4.getTree());

					}
					break;

			}
			} finally {dbg.exitSubRule(1);}
			dbg.location(60,53);
			CPARAN5=(Token)match(input,CPARAN,FOLLOW_CPARAN_in_prog866); dbg.location(60,55);
			// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:60:55: ( decl )*
			try { dbg.enterSubRule(2);

			loop2:
			while (true) {
				int alt2=2;
				try { dbg.enterDecision(2, decisionCanBacktrack[2]);

				int LA2_0 = input.LA(1);
				if ( (LA2_0==CIRCLE||LA2_0==INT||LA2_0==RECTANGLE||LA2_0==TRIANGLE) ) {
					alt2=1;
				}

				} finally {dbg.exitDecision(2);}

				switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:60:55: decl
					{
					dbg.location(60,55);
					pushFollow(FOLLOW_decl_in_prog869);
					decl6=decl();
					state._fsp--;

					adaptor.addChild(root_0, decl6.getTree());

					}
					break;

				default :
					break loop2;
				}
			}
			} finally {dbg.exitSubRule(2);}
			dbg.location(60,61);
			pushFollow(FOLLOW_stmtBlock_in_prog872);
			stmtBlock7=stmtBlock();
			state._fsp--;

			adaptor.addChild(root_0, stmtBlock7.getTree());
			dbg.location(60,71);
			// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:60:71: ( block )*
			try { dbg.enterSubRule(3);

			loop3:
			while (true) {
				int alt3=2;
				try { dbg.enterDecision(3, decisionCanBacktrack[3]);

				int LA3_0 = input.LA(1);
				if ( (LA3_0==ANIMATION||LA3_0==ON) ) {
					alt3=1;
				}

				} finally {dbg.exitDecision(3);}

				switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:60:71: block
					{
					dbg.location(60,71);
					pushFollow(FOLLOW_block_in_prog874);
					block8=block();
					state._fsp--;

					adaptor.addChild(root_0, block8.getTree());

					}
					break;

				default :
					break loop3;
				}
			}
			} finally {dbg.exitSubRule(3);}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(60, 76);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "prog");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "prog"


	public static class decl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "decl"
	// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:61:1: decl : ( varDecl SEMIKOL !| objDecl SEMIKOL !);
	public final MGPLParser.decl_return decl() throws RecognitionException {
		MGPLParser.decl_return retval = new MGPLParser.decl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token SEMIKOL10=null;
		Token SEMIKOL12=null;
		ParserRuleReturnScope varDecl9 =null;
		ParserRuleReturnScope objDecl11 =null;

		CommonTree SEMIKOL10_tree=null;
		CommonTree SEMIKOL12_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "decl");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(61, 0);

		try {
			// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:61:14: ( varDecl SEMIKOL !| objDecl SEMIKOL !)
			int alt4=2;
			try { dbg.enterDecision(4, decisionCanBacktrack[4]);

			int LA4_0 = input.LA(1);
			if ( (LA4_0==INT) ) {
				alt4=1;
			}
			else if ( (LA4_0==CIRCLE||LA4_0==RECTANGLE||LA4_0==TRIANGLE) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(4);}

			switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:61:16: varDecl SEMIKOL !
					{
					root_0 = (CommonTree)adaptor.nil();


					dbg.location(61,16);
					pushFollow(FOLLOW_varDecl_in_decl890);
					varDecl9=varDecl();
					state._fsp--;

					adaptor.addChild(root_0, varDecl9.getTree());
					dbg.location(61,31);
					SEMIKOL10=(Token)match(input,SEMIKOL,FOLLOW_SEMIKOL_in_decl892); 
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:62:4: objDecl SEMIKOL !
					{
					root_0 = (CommonTree)adaptor.nil();


					dbg.location(62,4);
					pushFollow(FOLLOW_objDecl_in_decl899);
					objDecl11=objDecl();
					state._fsp--;

					adaptor.addChild(root_0, objDecl11.getTree());
					dbg.location(62,19);
					SEMIKOL12=(Token)match(input,SEMIKOL,FOLLOW_SEMIKOL_in_decl901); 
					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(63, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "decl");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "decl"


	public static class varDecl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "varDecl"
	// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:64:1: varDecl : ( INT ^ LDF ( init )? | INT ^ LDF OBRACKET ! NUMBER CBRACKET !);
	public final MGPLParser.varDecl_return varDecl() throws RecognitionException {
		MGPLParser.varDecl_return retval = new MGPLParser.varDecl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token INT13=null;
		Token LDF14=null;
		Token INT16=null;
		Token LDF17=null;
		Token OBRACKET18=null;
		Token NUMBER19=null;
		Token CBRACKET20=null;
		ParserRuleReturnScope init15 =null;

		CommonTree INT13_tree=null;
		CommonTree LDF14_tree=null;
		CommonTree INT16_tree=null;
		CommonTree LDF17_tree=null;
		CommonTree OBRACKET18_tree=null;
		CommonTree NUMBER19_tree=null;
		CommonTree CBRACKET20_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "varDecl");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(64, 0);

		try {
			// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:64:14: ( INT ^ LDF ( init )? | INT ^ LDF OBRACKET ! NUMBER CBRACKET !)
			int alt6=2;
			try { dbg.enterDecision(6, decisionCanBacktrack[6]);

			int LA6_0 = input.LA(1);
			if ( (LA6_0==INT) ) {
				int LA6_1 = input.LA(2);
				if ( (LA6_1==LDF) ) {
					int LA6_2 = input.LA(3);
					if ( (LA6_2==OBRACKET) ) {
						alt6=2;
					}
					else if ( (LA6_2==ASSIGN||LA6_2==SEMIKOL) ) {
						alt6=1;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 6, 2, input);
							dbg.recognitionException(nvae);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(6);}

			switch (alt6) {
				case 1 :
					dbg.enterAlt(1);

					// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:64:16: INT ^ LDF ( init )?
					{
					root_0 = (CommonTree)adaptor.nil();


					dbg.location(64,19);
					INT13=(Token)match(input,INT,FOLLOW_INT_in_varDecl916); 
					INT13_tree = (CommonTree)adaptor.create(INT13);
					root_0 = (CommonTree)adaptor.becomeRoot(INT13_tree, root_0);
					dbg.location(64,21);
					LDF14=(Token)match(input,LDF,FOLLOW_LDF_in_varDecl919); 
					LDF14_tree = (CommonTree)adaptor.create(LDF14);
					adaptor.addChild(root_0, LDF14_tree);
					dbg.location(64,25);
					// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:64:25: ( init )?
					int alt5=2;
					try { dbg.enterSubRule(5);
					try { dbg.enterDecision(5, decisionCanBacktrack[5]);

					int LA5_0 = input.LA(1);
					if ( (LA5_0==ASSIGN) ) {
						alt5=1;
					}
					} finally {dbg.exitDecision(5);}

					switch (alt5) {
						case 1 :
							dbg.enterAlt(1);

							// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:64:25: init
							{
							dbg.location(64,25);
							pushFollow(FOLLOW_init_in_varDecl921);
							init15=init();
							state._fsp--;

							adaptor.addChild(root_0, init15.getTree());

							}
							break;

					}
					} finally {dbg.exitSubRule(5);}

					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:65:5: INT ^ LDF OBRACKET ! NUMBER CBRACKET !
					{
					root_0 = (CommonTree)adaptor.nil();


					dbg.location(65,8);
					INT16=(Token)match(input,INT,FOLLOW_INT_in_varDecl929); 
					INT16_tree = (CommonTree)adaptor.create(INT16);
					root_0 = (CommonTree)adaptor.becomeRoot(INT16_tree, root_0);
					dbg.location(65,10);
					LDF17=(Token)match(input,LDF,FOLLOW_LDF_in_varDecl932); 
					LDF17_tree = (CommonTree)adaptor.create(LDF17);
					adaptor.addChild(root_0, LDF17_tree);
					dbg.location(65,22);
					OBRACKET18=(Token)match(input,OBRACKET,FOLLOW_OBRACKET_in_varDecl934); dbg.location(65,24);
					NUMBER19=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_varDecl937); 
					NUMBER19_tree = (CommonTree)adaptor.create(NUMBER19);
					adaptor.addChild(root_0, NUMBER19_tree);
					dbg.location(65,39);
					CBRACKET20=(Token)match(input,CBRACKET,FOLLOW_CBRACKET_in_varDecl939); 
					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(66, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "varDecl");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "varDecl"


	public static class init_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "init"
	// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:67:1: init : ASSIGN expr ;
	public final MGPLParser.init_return init() throws RecognitionException {
		MGPLParser.init_return retval = new MGPLParser.init_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ASSIGN21=null;
		ParserRuleReturnScope expr22 =null;

		CommonTree ASSIGN21_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "init");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(67, 0);

		try {
			// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:67:14: ( ASSIGN expr )
			dbg.enterAlt(1);

			// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:67:16: ASSIGN expr
			{
			root_0 = (CommonTree)adaptor.nil();


			dbg.location(67,16);
			ASSIGN21=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_init957); 
			ASSIGN21_tree = (CommonTree)adaptor.create(ASSIGN21);
			adaptor.addChild(root_0, ASSIGN21_tree);
			dbg.location(67,23);
			pushFollow(FOLLOW_expr_in_init959);
			expr22=expr();
			state._fsp--;

			adaptor.addChild(root_0, expr22.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(67, 26);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "init");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "init"


	public static class objDecl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "objDecl"
	// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:68:1: objDecl : ( objType LDF ^ OPARAN ! ( attrAssList )? CPARAN !| objType LDF ^ OBRACKET ! NUMBER CBRACKET !);
	public final MGPLParser.objDecl_return objDecl() throws RecognitionException {
		MGPLParser.objDecl_return retval = new MGPLParser.objDecl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token LDF24=null;
		Token OPARAN25=null;
		Token CPARAN27=null;
		Token LDF29=null;
		Token OBRACKET30=null;
		Token NUMBER31=null;
		Token CBRACKET32=null;
		ParserRuleReturnScope objType23 =null;
		ParserRuleReturnScope attrAssList26 =null;
		ParserRuleReturnScope objType28 =null;

		CommonTree LDF24_tree=null;
		CommonTree OPARAN25_tree=null;
		CommonTree CPARAN27_tree=null;
		CommonTree LDF29_tree=null;
		CommonTree OBRACKET30_tree=null;
		CommonTree NUMBER31_tree=null;
		CommonTree CBRACKET32_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "objDecl");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(68, 0);

		try {
			// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:68:14: ( objType LDF ^ OPARAN ! ( attrAssList )? CPARAN !| objType LDF ^ OBRACKET ! NUMBER CBRACKET !)
			int alt8=2;
			try { dbg.enterDecision(8, decisionCanBacktrack[8]);

			int LA8_0 = input.LA(1);
			if ( (LA8_0==CIRCLE||LA8_0==RECTANGLE||LA8_0==TRIANGLE) ) {
				int LA8_1 = input.LA(2);
				if ( (LA8_1==LDF) ) {
					int LA8_2 = input.LA(3);
					if ( (LA8_2==OPARAN) ) {
						alt8=1;
					}
					else if ( (LA8_2==OBRACKET) ) {
						alt8=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 8, 2, input);
							dbg.recognitionException(nvae);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 1, input);
						dbg.recognitionException(nvae);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				dbg.recognitionException(nvae);
				throw nvae;
			}

			} finally {dbg.exitDecision(8);}

			switch (alt8) {
				case 1 :
					dbg.enterAlt(1);

					// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:68:16: objType LDF ^ OPARAN ! ( attrAssList )? CPARAN !
					{
					root_0 = (CommonTree)adaptor.nil();


					dbg.location(68,16);
					pushFollow(FOLLOW_objType_in_objDecl971);
					objType23=objType();
					state._fsp--;

					adaptor.addChild(root_0, objType23.getTree());
					dbg.location(68,27);
					LDF24=(Token)match(input,LDF,FOLLOW_LDF_in_objDecl973); 
					LDF24_tree = (CommonTree)adaptor.create(LDF24);
					root_0 = (CommonTree)adaptor.becomeRoot(LDF24_tree, root_0);
					dbg.location(68,35);
					OPARAN25=(Token)match(input,OPARAN,FOLLOW_OPARAN_in_objDecl976); dbg.location(68,37);
					// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:68:37: ( attrAssList )?
					int alt7=2;
					try { dbg.enterSubRule(7);
					try { dbg.enterDecision(7, decisionCanBacktrack[7]);

					int LA7_0 = input.LA(1);
					if ( (LA7_0==LDF) ) {
						alt7=1;
					}
					} finally {dbg.exitDecision(7);}

					switch (alt7) {
						case 1 :
							dbg.enterAlt(1);

							// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:68:37: attrAssList
							{
							dbg.location(68,37);
							pushFollow(FOLLOW_attrAssList_in_objDecl979);
							attrAssList26=attrAssList();
							state._fsp--;

							adaptor.addChild(root_0, attrAssList26.getTree());

							}
							break;

					}
					} finally {dbg.exitSubRule(7);}
					dbg.location(68,56);
					CPARAN27=(Token)match(input,CPARAN,FOLLOW_CPARAN_in_objDecl982); 
					}
					break;
				case 2 :
					dbg.enterAlt(2);

					// /home/phrizzel/ponyshit/repo/compilerbau/MGPL.g:69:4: objType LDF ^ OBRACKET ! NUMBER CBRACKET !
					{
					root_0 = (CommonTree)adaptor.nil();


					dbg.location(69,4);
					pushFollow(FOLLOW_objType_in_objDecl989);
					objType28=objType();
					state._fsp--;

					adaptor.addChild(root_0, objType28.getTree());
					dbg.location(69,15);
					LDF29=(Token)match(input,LDF,FOLLOW_LDF_in_objDecl991); 
					LDF29_tree = (CommonTree)adaptor.create(LDF29);
					root_0 = (CommonTree)adaptor.becomeRoot(LDF29_tree, root_0);
					dbg.location(69,25);
					OBRACKET30=(Token)match(input,OBRACKET,FOLLOW_OBRACKET_in_objDecl994); dbg.location(69,27);
					NUMBER31=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_objDecl997); 
					NUMBER31_tree = (CommonTree)adaptor.create(NUMBER31);
					adaptor.addChild(root_0, NUMBER31_tree);
					dbg.location(69,42);
					CBRACKET32=(Token)match(input,CBRACKET,FOLLOW_CBRACKET_in_objDecl999); 
					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(70, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "objDecl");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "objDecl"


	public static class objType_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};

